# budget-guard

./: .gitignore  README.md  SECURITY.md  demo.py
.github/workflows/: ci.yml  codeql.yml
python/: README.md  pyproject.toml
python/budgetguard/: __init__.py  errors.py  guard.py  policy.py  pricing.py
python/tests/: test_budgetguard.py  test_properties.py
typescript/: demo.ts  package-lock.json  package.json
typescript/src/: errors.ts  guard.ts  index.ts  policy.ts  pricing.ts
typescript/test/: budgetguard.test.ts  properties.test.ts
